@@ -90,7 +90,7 @@ extern doublePair lastScreenViewCenter;
 static char shouldMoveCamera = true;
 
 
-extern double viewWidth;
+extern double visibleViewWidth;
 extern double viewHeight;
 
 extern int screenW, screenH;
@@ -3823,7 +3823,7 @@ void LivingLifePage::drawOffScreenSounds() {
         return;
         }
     
-    double xRadius = viewWidth / 2 - 32;
+    double xRadius = visibleViewWidth / 2 - 32;
     double yRadius = viewHeight / 2 - 32;
     
     FloatColor red = { 0.65, 0, 0, 1 };
@@ -6476,11 +6476,11 @@ void LivingLifePage::draw( doublePair inViewCenter,
 
 
     //setDrawColor( 1, 1, 1, 1 );
-    //drawSquare( lastScreenViewCenter, viewWidth );
+    //drawSquare( lastScreenViewCenter, visibleViewWidth );
     
 
     //if( currentGamePage != NULL ) {
-    //    currentGamePage->base_draw( lastScreenViewCenter, viewWidth );
+    //    currentGamePage->base_draw( lastScreenViewCenter, visibleViewWidth );
     //    }
     
     setDrawColor( 1, 1, 1, 1 );
@@ -20678,11 +20678,11 @@ void LivingLifePage::step() {
                 lrint( moveScale * 
                        cameraFollowsObject->currentMoveDirection.y );
  
-            if( screenCenterPlayerOffsetX < -viewWidth / 3 ) {
-                screenCenterPlayerOffsetX =  -viewWidth / 3;
+            if( screenCenterPlayerOffsetX < -visibleViewWidth / 3 ) {
+                screenCenterPlayerOffsetX =  -visibleViewWidth / 3;
                 }
-            if( screenCenterPlayerOffsetX >  viewWidth / 3 ) {
-                screenCenterPlayerOffsetX =  viewWidth / 3;
+            if( screenCenterPlayerOffsetX >  visibleViewWidth / 3 ) {
+                screenCenterPlayerOffsetX =  visibleViewWidth / 3;
                 }
             if( screenCenterPlayerOffsetY < -viewHeight / 5 ) {
                 screenCenterPlayerOffsetY =  -viewHeight / 5;
@@ -20755,7 +20755,7 @@ void LivingLifePage::step() {
         
         char viewChange = false;
         
-        int maxRX = viewWidth / 15;
+        int maxRX = visibleViewWidth / 15;
         int maxRY = viewHeight / 15;
         int maxR = 0;
         double moveSpeedFactor = 20 * cameraFollowsObject->currentSpeed;
